<resources>
    <string name="page_login">登录UI</string>
    <string name="page_pick_photo">图片选择UI</string>
    <string name="page_launcher">启动UI</string>
    <string name="page_browser">浏览器UI</string>
    <string name="page_advertisement">广告UI</string>
    <string name="page_first_open_app">首次打开App引导UI</string>
    <string name="page_home_tab">首页TabUI</string>
    <string name="page_tab_message">Tab消息UI</string>
    <string name="page_tab_account">Tab我的UI</string>
    <string name="page_tab_talent">Tab人才UI</string>
    <string name="page_mine_candidate">我的人才UI</string>
    <string name="page_candidate_search">简历搜索UI</string>
    <string name="page_edit_search_condition">简搜索条件编辑UI</string>
    <string name="page_candidate_detail">简历详情UI</string>
    <string name="page_label_library">标签库UI</string>
    <string name="page_assign_label">添加标签UI</string>
    <string name="page_collection">我的收藏UI</string>
    <string name="page_corp_avatar">头像裁剪UI</string>
    <string name="page_edit_nick_name">编辑昵称UI</string>
    <string name="page_select_candidate_platform">选择导入渠道UI</string>
    <string name="page_email_sync_list">邮箱同步列表UI</string>
    <string name="page_add_email_sync_account">添加简历邮箱同步账号UI</string>
    <string name="page_share_bind_email">分享时绑定邮箱UI</string>
    <string name="page_share_email">邮箱分享UI</string>
    <string name="page_account_experience">我的等级经验UI</string>
    <string name="page_create_candidate">创建简历UI</string>
    <string name="page_chat">聊天UI</string>
    <string name="page_forwarding">中间转发任务UI</string>
    <string name="page_communicate_nearly">最近联系过的UI</string>
    <string name="page_system">系统消息UI</string>
    <string name="page_resume_import">简历导入UI</string>
    <string name="page_candidate_text">简历文本UI</string>
    <string name="page_city_selected">城市选择UI</string>
    <string name="page_write_email">写邮件UI</string>
    <string name="page_send_email_status">邮件状态UI</string>
    <string name="page_user_set">用户设置UI</string>
    <string name="page_bind_mobile">验证信息UI</string>
    <string name="page_candidate_enable_update_list">人才更新列表UI</string>
    <string name="page_candidate_update_qa">人才更新常见问题UI</string>
    <string name="page_update_log">更新日志UI</string>
    <string name="page_already_updated_list">已更新列表UI</string>
    <string name="page_friend_list">好友列表UI</string>
    <string name="page_friend_search">好友搜索UI</string>
    <string name="page_friend_request_list">好友请求UI</string>
    <string name="page_friend_home">好友主页UI</string>
    <string name="page_friend_dynamic">好友动态UI</string>
    <string name="page_nearly_person">附近的人UI</string>
    <string name="page_resume_update_card">简历更新卡片UI</string>
    <string name="page_qrcode">二维码扫描UI</string>
    <string name="page_change_mobile">更换手机号UI</string>
    <string name="page_selected_friend">好友选择UI</string>
    <string name="page_feed_back">意见反馈UI</string>
    <string name="page_enable_update_search">简历搜索UI</string>
    <string name="page_smart_group_index">智能分组大类UI</string>
    <string name="page_user_verify_guide">身份认证引导UI</string>
    <string name="title_set">设置</string>
    <string name="title_my_experience">我的等级</string>
    <string name="title_city_selected">城市选择</string>
    <string name="title_send_email_status">邮件状态</string>
    <string name="title_bind_mobile">验证信息</string>
    <string name="title_qa">常见疑问</string>
    <string name="title_already_updated_list">更新记录</string>
    <string name="title_friend_list">我的好友</string>
    <string name="title_selected">选择</string>
    <string name="title_nearly_person">附近的人</string>
    <string name="title_check_mobile">验证手机号</string>
    <string name="title_feed_back">意见反馈</string>
    <string name="title_check_id">身份验证</string>
    <string name="title_fill_user_info">个人信息</string>
    <string name="network_no_response">网络连接出现错误！</string>
    <string name="network_not_service_error">服务暂时不可用！</string>
    <string name="network_candidate_exist_error">已经拥有相同的简历！</string>
    <string name="network_candidate_reply_exist_error">对方已经拥有该人才！</string>
    <string name="network_cellphone_not_bind_error">手机号未绑定！</string>
    <string name="app_name">八爪盒子</string>
    <string name="chose_photo">图片选取</string>
    <string name="take_photo_failed">调用摄像头失败，请检查是否开启了摄像头权限</string>
    <string name="sure_with_count" formatted="false">确定(%s/%s)</string>
    <string name="require_camera_denied">无法获取摄像头权限！</string>
    <string name="most_chose_count_with_value">您最多可以选择%s张图片!</string>
    <string name="platform_changed_you_need_reLogin">您的账号在其他设备上登录，请重新登录</string>
    <string name="retry_hint">重新加载</string>
    <string name="loading_failed">网络不给力</string>
    <string name="require_write_storage_denied">“八爪盒子”缺少运行所必须的“存储权限”，请在手机“权限设置”中打开存储权限！</string>
    <string name="pick_city">城市选择</string>
    <string name="delete">删除</string>
    <string name="please_chose">请选择</string>
    <string name="skip">跳过</string>
    <string name="smsCode_not_null">请填写短信验证码</string>
    <string name="user_agreement">用户协议</string>
    <string name="input_cellphone">请输入手机号</string>
    <string name="input_sms_check_code">请输入验证码</string>
    <string name="login">登录</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="send_after_seconds_ith_value">%ss后重新获取</string>
    <string name="input_username_correctly">请输入正确的手机号</string>
    <string name="input_sms_code_correctly">请输入正确的验证码</string>
    <string name="smsCode_length_error">短信验证码错误</string>
    <string name="starting_load_new_apk">开始下载新版本，请稍等</string>
    <string name="text_failed_download">下载失败</string>
    <string name="text_is_downloading_apk">正在下载新版八爪盒子</string>
    <string name="email">邮箱</string>
    <string name="submit">提交</string>
    <string name="candidate">人才</string>
    <string name="message">消息</string>
    <string name="home">首页</string>
    <string name="tab_account">我的</string>
    <string name="hint_search_mine_candidate">输入关键字，搜索我的人才</string>
    <string name="group_folder_search_hint_title">搜索职位关键字</string>
    <string name="group_folder_search_hint_company">搜索公司关键字</string>
    <string name="smart_group_search_default_hint">搜索关键字</string>
    <string name="seek_search_hint">查找添加过寻访记录的人</string>
    <string name="collection_search_hint">查找收藏过的人</string>
    <string name="company_talent_search_hint">搜索企业人才库</string>
    <string name="seek_job_prediction_hint">查找正在求职中的人才</string>
    <string name="resume_update_search_hint">查找您需要更新的人才</string>
    <string name="multiple_search_keyword_hint">多关键词需空格隔开</string>
    <string name="mine_collection">我的收藏</string>
    <string name="collection">收藏</string>
    <string name="un_collection">取消收藏</string>
    <string name="collection_success">收藏成功！</string>
    <string name="un_collection_success">取消收藏成功！</string>
    <string name="un_collection_success_delay">取消收藏中，请稍后（10S）刷新。</string>
    <string name="add_record">添加寻访</string>
    <string name="add_label">打标签</string>
    <string name="city_all">全国</string>
    <string name="filter_more">高级筛选</string>
    <string name="label">标签</string>
    <string name="no_value">暂无数据</string>
    <string name="search_result_no_value">没有搜到简历</string>
    <string name="input_search_key_to_search">换个关键字或点开高级筛选试试吧！</string>
    <string name="search_result_count_hint_value">共找到%s位人才</string>
    <string name="search_result_count_mine_hint_value" formatted="false">共%s条数据，求职中%s条</string>
    <string name="clear">清空</string>
    <string name="more_filter_workYears_title">工作经验</string>
    <string name="more_filter_degree_title">学历</string>
    <string name="more_filter_school_title">毕业院校</string>
    <string name="more_filter_source_title">简历来源</string>
    <string name="more_filter_sex_title">性别</string>
    <string name="search_history">搜索历史</string>
    <string name="text_candidate_work_experience">工作经历</string>
    <string name="text_candidate_self_des">自我评价</string>
    <string name="text_candidate_online_lable_education">教育经历</string>
    <string name="message_unknown">未知</string>
    <string name="main_job_with_value">工作职责：\n%s</string>
    <string name="report_to_with_value">汇报对象：%s</string>
    <string name="salary_with_value">薪资情况：%s</string>
    <string name="subordinateCount_value">下属人数：%s人</string>
    <string name="project_content_value">项目描述：\n%s</string>
    <string name="project_role_value">项目角色：%s</string>
    <string name="project_responsibility_value">职责：\n%s</string>
    <string name="resume_source_text">简历原文</string>
    <string name="remark_create_time_extra">上传于：%s</string>
    <string name="remark_from_user">来自 %s</string>
    <string name="press_to_speak">按住说话</string>
    <string name="up_move_to_cancel_send">手指上滑，取消发送</string>
    <string name="release_to_cancel_send">松开手指，取消发送</string>
    <string name="audio_play_mode_speaker">扬声器播放</string>
    <string name="audio_play_mode_communication">听筒播放</string>
    <string name="audio_error_default">录音出现错误</string>
    <string name="audio_error_too_quickly">录音太频繁，请稍后在尝试</string>
    <string name="audio_error_time_overflow">说话时间超长</string>
    <string name="audio_error_cancelled">录音取消</string>
    <string name="remark_file_is_not_exist_is_delete">备注附件不存在，您可能删除了附件</string>
    <string name="audio_file_is_not_exist_is_delete">找不到语音附件，您可能删除了附件</string>
    <string name="app_need_record_permission">很抱歉，您拒绝了录音请求！</string>
    <string name="save">保存</string>
    <string name="no_fill_remark_msg">请输入寻访内容</string>
    <string name="voice_to_text_failed">消息转换失败</string>
    <string name="on_voice_to_text">正在转换\&#8230;</string>
    <string name="confirm_delete_self_built_candidate">确定把当前候选人从我的简历库中删除吗？</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="work_years_with_tag">%s年工作经验</string>
    <string name="more_than_twenty_years">20年以上工作经验</string>
    <string name="share_menu_wechat">微信</string>
    <string name="share_menu_wechat_fc">朋友圈</string>
    <string name="share_menu_qq">QQ</string>
    <string name="share_menu_qzone">QQ空间</string>
    <string name="share_menu_sms">短信</string>
    <string name="share_success">分享成功</string>
    <string name="wechat_not_install">您还未安装微信</string>
    <string name="wechat_auth_failed">微信授权失败</string>
    <string name="qq_not_install">您还未安装QQ</string>
    <string name="wechat_version_low">微信版本过低</string>
    <string name="confirm_del_mark">确定删除标签?</string>
    <string name="all_label">所有标签</string>
    <string name="resume_in_label">%s人</string>
    <string name="create_label_not_same_hint">正在创建的标签已经存在</string>
    <string name="create_label_success">创建标签成功</string>
    <string name="input_label_msg">请编辑标签内容</string>
    <string name="label_change_is_save">是否保存本次编辑？</string>
    <string name="not_save">不保存</string>
    <string name="grade_value">等级\&#160;LV.%s</string>
    <string name="grade_value_b">等级：LV.%s</string>
    <string name="rank">排行榜</string>
    <string name="friend_count_value">%s万+</string>
    <string name="sign_out">退出当前账号</string>
    <string name="update_now">立即更新</string>
    <string name="update_later">稍后更新</string>
    <string name="mobile">手机号码</string>
    <string name="sms_code">验证码</string>
    <string name="submit_to_check">提交验证</string>
    <string name="update">更新</string>
    <string name="intentions">求职意向</string>
    <string name="not_hint_anymore">不再提示</string>
    <string name="feeling_for_update_by_engine">更新后有什么感受？</string>
    <string name="hint_feeling_for_update_by_engine">请简要描述你的问题和意见</string>
    <string name="get_update_opportunity_for_feed_back">（提交后当天可再次获得一次更新额度）</string>
    <string name="update_by_engine_feed_back_a">很有用</string>
    <string name="update_by_engine_feed_back_b">有BUG</string>
    <string name="update_by_engine_feed_back_c">想吐槽</string>
    <string name="update_by_engine_feed_back_d">无感</string>
    <string name="detail">详情</string>
    <string name="enable_to_update_to_resume">简历可更新</string>
    <string name="project_experience">项目经历</string>
    <string name="add_recommend">添加提醒</string>
</resources>